almost everything committed

--- a/src/Components/Shared/Navbar/Navigation.css
+++ b/src/Components/Shared/Navbar/Navigation.css
@@ -2,6 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap');   
 @import url('https://fonts.googleapis.com/css2?family=Cookie&display=swap');
 
+*{
+    box-sizing: border-box;
+}
+.navbar{
+    height:80px !important;
+}
+
 .CompanyName{
 
     font-family: 'Cinzel', serif;
@@ -14,35 +21,62 @@
 
     font-family: 'Cookie', cursive;
 }
+
 .Navigation_options{
     color:black !important;
-    padding-bottom: 20px;
-    padding-top: 10px;
-    /* width: 90px; */
     
     
 }
 .Navigation_options:hover{
     border-bottom: 3px solid rgb(6, 3, 56);
-    padding-bottom: 17px;
-    padding-top: 10px;
+    
     
     
 }
-
+.Name{
+    color:rgb(255, 8, 0) !important;
+    font-weight: bold !important;
+}
 #sign_in_button{
     color:white !important;
-    /* background-color:rgb(21, 196, 187); */
-    background-image: linear-gradient(to right, rgb(10, 2, 58) , rgb(7, 77, 99));
-    width: 100px;
-    height: 40px;
+    background-color:rgb(21, 196, 187);
+    /* background-image: linear-gradient(to right, rgb(10, 2, 58) , rgb(7, 77, 99)); */
+    width: 80px;
+    height: 30px;
     border-radius: 15px;
     border:0px !important;
-    margin-top: -5px ;
+    
+    
+
     
 }
 #sign_in_button:hover{
     
-    background-image: linear-gradient(to right, rgb(7, 77, 99), rgb(10, 2, 58));
+    /* background-image: linear-gradient(to right, rgb(56, 181, 219), rgb(10, 2, 58)); */
+    background-color:rgb(8, 141, 137);
+}
+.white{
+    background-color:white;
+}
+
+@media only screen and (max-width: 990px){
+
+
+    .CompanyName{
+
+        margin-top: 0px !important;
     
+    }
+    .Navigation_options{
+        
+        border-bottom: 3px solid rgb(248, 247, 247);
+        
+        
+        
+    }
+    .Navigation_options:hover{
+        border-bottom: 3px solid rgb(6, 3, 56);
+        
+        
+    }
 }
